kompose/pipeline-helm/templates/superset-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
  name: superset-datapipeline-scw-ingress
spec:
  rules:
    - host: superset.datapipeline.sa-scw.fr
      http:
        paths:
          - backend:
              service:
                name: superset-service
                port:
                  number: 8088
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - superset.datapipeline.sa-scw.fr
      secretName: superset-datapipeline-scw-tls
